# nothing-linux

./: Cargo.toml  README.md
nothing/src/: connect.rs  nothing_ear_2.rs
src-egui/: Cargo.toml
src-egui/src/: async_worker.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
