[package]
name = "nothing-linux"
version = "0.0.2"
description = "nothing-linux"
authors = ["sn99"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nothing_linux_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bluer = { version = "0.17.0", features = ["full"] }
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "macros"] }

nothing = { path = "../nothing" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
